Quick Fix
- made images block to remove extra gap
- removed ratio
- fixed bug in uploadVideo encoding

--- a/src/css/components/_thumbnail.scss
+++ b/src/css/components/_thumbnail.scss
@@ -6,7 +6,7 @@
 }
 
 .wonderland-thumbnail__image {
-
+	display: block;
 }
 
 .wonderland-thumbnail__caption {
